Un dettallito extra

--- a/src/app/components/home/computadoras/computadoras.component.html
+++ b/src/app/components/home/computadoras/computadoras.component.html
@@ -47,7 +47,7 @@
       <td>{{ computadora.creador }}</td>
       <td>
         <i class="fas fa-eye"
-        placement="top" ngbTooltip="Ver vehículo"
+        placement="top" ngbTooltip="Ver computadora"
         style="cursor: pointer;" 
         (click)="verVehiculo(computadora)"
         ></i>
